@startuml

title __HOUSE's Class Diagram__\n

  namespace dss {
    namespace Houses.House {
      class dss.Houses.House.BudgetHouse {
          + getMaterials()
          + setMaterials()
      }
    }
  }
  

  namespace dss {
    namespace Houses.House {
      abstract class dss.Houses.House.House {
          ~ materials : List<String>
          + getMaterials()
          + setMaterials()
      }
    }
  }
  

  namespace dss {
    namespace Houses.House {
      class dss.Houses.House.HouseFactory {
          + createHouse()
      }
    }
  }
  

  namespace dss {
    namespace Houses.House {
      enum HouseType {
        BUDGET
        LUXURY
        MINIMALISTIC
      }
    }
  }
  

  namespace dss {
    namespace Houses.House {
      class dss.Houses.House.LuxuryHouse {
          + getMaterials()
          + setMaterials()
      }
    }
  }
  

  namespace dss {
    namespace Houses.House {
      class dss.Houses.House.Main {
          {static} + main()
      }
    }
  }
  

  namespace dss {
    namespace Houses.House {
      class dss.Houses.House.MinimalisticHouse {
          + getMaterials()
          + setMaterials()
      }
    }
  }
  

  dss.Houses.House.BudgetHouse -up-|> dss.Houses.House.House
  dss.Houses.House.LuxuryHouse -up-|> dss.Houses.House.House
  dss.Houses.House.MinimalisticHouse -up-|> dss.Houses.House.House


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
